--- a/404.md
+++ b/404.md
@@ -1,8 +1,8 @@
 ---
-layout: page
-title: 404 - Page not found
-permalink: /404.html
+layout: default
+title: "404: Page not found"
+permalink: 404.html
 ---
 
-Sorry, we can't find that page that you're looking for. You can try again by going [back to the homepage]({{ site.baseurl }}/).
-
+# 404: Page not found
+Sorry, we've misplaced that URL or it's pointing to something that doesn't exist. [Head back home]({{ site.url }}) to try finding it again.
